--- a/style.css
+++ b/style.css
@@ -160,3 +160,50 @@ p {
   padding: 10px;
   text-align: center;
 }
+
+
+/* projects number 3........... */
+
+#wrapper{
+  margin-top: 20px;
+   background-color: gray;
+   text-align: center;
+   width: 100%;
+   height: 500px;
+}
+
+
+.num-guss{
+   background-color: black;
+   padding: 10px;
+   text-align: center;
+   color: white;
+}
+
+.form{
+   margin-top: 30px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-direction: column;
+}
+
+#guess{
+   font-size: 40px;
+   color: white;
+   font-weight: bold;
+}
+
+#guessfield{
+  margin-top: 10px;
+  padding: 10px;
+}
+
+#subt{
+  margin-top: 20px;
+  padding: 8px;
+  background-color: black;
+  color: white;
+  width: 180px;
+  border-radius: 10px;
+}
